# cloud-hypervisor

./: Cargo.toml
devices/src/: acpi.rs
src/: main.rs
vhost_user_nimble_net/: Cargo.toml
vhost_user_nimble_net/src/: base.rs  lib.rs  main.rs
virtio-devices/src/: lib.rs  seccomp_filters.rs
virtio-devices/src/vhost_user/: mod.rs  nimble_net.rs
vm-virtio/src/: lib.rs
vmm/src/: config.rs  device_manager.rs  lib.rs  memory_manager.rs  vm.rs  vm_config.rs
vmm/src/api/: http.rs  http_endpoint.rs  mod.rs
vmm/src/api/openapi/: cloud-hypervisor.yaml
