[package]
name = "vhost_user_nimble_net"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2021"
build = "../build.rs"

[dependencies]
argh = "0.1.9"
env_logger = "0.10.0"
epoll = "4.3.1"
libc = "0.2.139"
log = "0.4.17"
option_parser = { path = "../option_parser" }
thiserror = "1.0.39"
vhost = { version = "0.6.0", features = ["vhost-user-slave"] }
vhost-user-backend = "0.8.0"
virtio-bindings = "0.2.0"
virtio-queue = "0.7.1"
vm-memory = { version = "0.10.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
vmm-sys-util = "0.11.0"